welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:12: error: not found: value T
    T(i)=getCouleurSol()
    ^Array1:25: error: not found: value T
    setCouleurBrosse(T(l))
                     ^